--- a/web/src/styles/base.scss
+++ b/web/src/styles/base.scss
@@ -33,8 +33,8 @@ html {
   background-color: $color-grey-dark;
 }
 body {
+  background-color: $color-grey-dark;
   margin: 0;
-  background-color: $color-white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   word-wrap: break-word;
